beginning of intro

--- a/mics2015.bib
+++ b/mics2015.bib
@@ -26,6 +26,24 @@
  address = {New York, NY, USA},
  } 
 
+@inproceedings{Bieniusa:2008,
+ author = {Bieniusa, Annette and Degen, Markus and Heidegger, Phillip and Thiemann, Peter and Wehr, Stefan and Gasbichler, Martin and Sperber, Michael and Crestani, Marcus and Klaeren, Herbert and Knauel, Eric},
+ title = {Htdp and Dmda in the Battlefield: A Case Study in First-year Programming Instruction},
+ booktitle = {Proceedings of the 2008 International Workshop on Functional and Declarative Programming in Education},
+ series = {FDPE '08},
+ year = {2008},
+ isbn = {978-1-60558-068-5},
+ location = {Victoria, BC, Canada},
+ pages = {1--12},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1411260.1411262},
+ doi = {10.1145/1411260.1411262},
+ acmid = {1411262},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {assisted programming, introductory programming course, scheme, teachscheme!},
+} 
+
 
 @misc{basic-clojure-info,
 	Author = {briantdawn},
