--- a/mics2015.tex
+++ b/mics2015.tex
@@ -143,12 +143,12 @@ build upon in later classes that introduce imperative features and
 object-oriented paradigm~\cite{Bieniusa:2008}. 
 
 Clojure is a relatively new language in the Lisp family that is
-rapidly gaining popularity in industry and in open source
+rapidly gaining popularity in industry and in the open source
 community. Clojure provides a functional easy-to-use approach to
 developing robust multi-threaded programs. 
  
 Clojure offers a variety of built-in datatypes and
-functions that, when introduced rigorously systematically in an
+functions that, when introduced rigorously and systematically in an
 introductory CS class, would allow students to practice data-focused program
 development. The abundance of open
 source libraries and projects allow students to continue development
@@ -160,7 +160,7 @@ This paper describes our work in progress in making Clojure and its
 environment usable for introductory level students. Our efforts
 include transforming Clojure error messages into more
 beginner-friendly ones and developing tools that would allow students
-seamlessly run their program code integrated with our
+to seamlessly run their program code integrated with our
 modifications without having to deal with Clojure tools that require
 more advanced knowledge. 
 
