--- a/mics2015.tex
+++ b/mics2015.tex
@@ -435,6 +435,17 @@ parameters collection upon runtime.
 %example would be better.}
 
 \subsection{Overview of ClojurEd project}\label{sec:project}
+ClojureEd is a project at UMM that is devoted to increasing usability
+of Clojure in an educational setting, in particular in introductory
+classes. It has originated in 2013 as a joint effort of alumni,
+students, and faculty. Several students have contributed to it as a
+part of several research efforts, in particular as a part of a two
+months summer research program in 2014 sponsored by the HHMI (Howard
+Hughes Medical Institute) grant and UMM MAP (Morris Academic Partnership). Two
+other students are currently working on the project sponsored by UMN
+UROP (Undergraduate Research Opportunity Program). 
+
+Currently the project features 
 
 \section{Error Messages}\label{sec:errors}
 
@@ -695,7 +706,6 @@ Handling runtime errors is made relatively simple by using a {\tt try/catch} wit
 None of these problems have not been resolved, but we have determined approaches that should solve these problems. Finding the origin of errors caused by laziness has not been solved, but we have a potential solution that involves forcing evaluation of lazy sequences in student code. Compilation errors are also problematic, but we hope to resolve this by intercepting error messages as they are created, which is detailed in section \ref{sec:approach}.
  
 \subsection{Leiningen}
-<<<<<<< 
 Leiningen is an open source project under active development that is the primary tool for project management in the Clojure community\cite{LeinGitHub}. Leiningen is a fully featured project manager that cleanly deals with dependencies as well as provides useful tools for developing projects. When a project is run in Leiningen, Leiningen will resolve all dependencies. For example, if your project requires a plugin, Leiningen will automatically retrieve, install, and apply that plugin to your code. After it has resolved the dependencies, Leiningen uses other tools to build, compile, and run the project. Leiningen makes running Clojure projects extremely simple for the user. With Leiningen, it only takes one command to begin a new project, and it only takes one command to run a project. Because of the level of abstraction that Leiningen offers, we have decided that it is the best option for an introductory course.
 
 While Leiningen is a very helpful tool, there are still some aspects that are challenging for introductory students. The most difficult of which is the interface. Leiningen uses the command line as its primary interface. The command line is both a distraction and a barrier to teaching the material in an introductory course. Therefore, we would like to abstract over the command line by using a graphical interface, ideally integrated with the IDE used by students. This graphical interface would extend the simplicity of Leiningen while still providing the same functionality needed by students.
