finished ClojureEd secstion

--- a/mics2015.tex
+++ b/mics2015.tex
@@ -445,7 +445,23 @@ Hughes Medical Institute) grant and UMM MAP (Morris Academic Partnership). Two
 other students are currently working on the project sponsored by UMN
 UROP (Undergraduate Research Opportunity Program). 
 
-Currently the project features 
+As a part of the project we have developed the system of modifying
+Clojure error messages, as described in section~\ref{sec:errors}. The
+current challenges involve integrating our system with 
+Clojure project management tools and IDEs. The summer project explored
+some approaches to this problem, but did not result in a
+solution. Recently we have identified elements of the Clojure project
+architecture that would allow us to develop plugins to handle student
+code in a way that would not require any advanced knowledge (such as
+working with command line) on their part. However, this is still work
+in progress, and no working solution exists at this
+point. Section~\ref{sec:technical} details these efforts and
+challenges. 
+
+The code is available at
+
+\noindent
+\url{https://github.com/Clojure-Intro-Course/clojure-intro-class} 
 
 \section{Error Messages}\label{sec:errors}
 
