--- a/mics2015.tex
+++ b/mics2015.tex
@@ -119,12 +119,28 @@ fello056@morris.umn.edu, lemmo031@morris.umn.edu, magnu401@morris.umn.edu, \\
 %\alcomment{Should these say @morris.umn.edu?}
 
 \section*{\centering Abstract}
-The abstract
-\escomment{Is this supposed to be the abstract that we submitted? The
-  one that's three paragraphs long?}
-\emcomment{No, usually it's different from the abstract submitted for
-  review. An abstract is usually written when the paper is nearly
-  finished.}
+Clojure is a newer functional programming language in the Lisp family
+of languages that runs on the Java Virtual Machine (JVM). 
+It is structured to use immutable data types and a rich collection of
+predefined data structures (lists, vectors, hash maps, etc.) which
+makes it a promising candidate for an introductory Computer Science
+(CS) class. However, Clojure presents significant challenges to
+introductory level students. The primary challenge for novice
+programmers is the confusing error messages that originate in the
+underlying Java system.
+Our work is a part of the ClojurEd project which aims to use Clojure
+to teach an introductory CS course. The goal is to create a
+programming
+environment that provides introductory students with understandable
+error messages and usable project management tools. 
+We discuss our accomplishments, current work in progress, and future
+directions. 
+
+%\escomment{Is this supposed to be the abstract that we submitted? The
+%  one that's three paragraphs long?}
+%\emcomment{No, usually it's different from the abstract submitted for
+%  review. An abstract is usually written when the paper is nearly
+%  finished.}
 
 \newpage
 \setcounter{page}{1}
