--- a/mics2015.tex
+++ b/mics2015.tex
@@ -810,9 +810,18 @@ clean up those error messages before they are sent back to Leiningen to be displ
 
 
 \section{Conclusions}\label{sec:conclusion}
-Currently we have a framework for taking Clojure error messages, and making them more accessible for an introductory student. On top of that, we have plans for more improvements on that process and other potential solutions to that problem. We have determined an approach to integrating that framework into the current Clojure project management system.
+Currently we have a framework for making Clojure error messages more
+accessible for an introductory student. However, we 
+still need to integrate this framework with IDEs and tools for
+managing students' Clojure code. We have determined an approach to
+perform such an integration, and are currently implementing it. 
 
-Future work would involve polishing the error messaging framework, developing the error handling system, and performing usability studies to test that framework and system.
+Further work would involve adjusting the error messaging framework
+based on the actual users' feedback,
+developing an environment that would make it easy for
+students to run their code and manage their files, 
+and performing usability studies
+to test that framework and system. 
 
 \bibliographystyle{acm}
 \bibliography{mics2015}
