final edits for intro

--- a/mics2015.tex
+++ b/mics2015.tex
@@ -151,12 +151,12 @@ using a Lisp as a programming language in an introductory CS class:
 the first language new programmers will use. Lisp offers a simple
 syntax and introduces students to modularity, abstraction, and
 data-driven program design while developing good programming
-practices being explicit about program design principles.
+practices by being explicit about program design principles.
 Essential concepts taught in such an
-introductory class have been shown to be effective in building a
-strong foundation that allows students to
+introductory class have been shown effective as a
+strong foundation for students to
 build upon in later classes that introduce imperative features and 
-object-oriented paradigm~\cite{Bieniusa:2008}. 
+the object-oriented paradigm~\cite{Bieniusa:2008}. 
 
 Clojure is a relatively new language in the Lisp family that is
 rapidly gaining popularity in industry and in the open source
