Added slides for error messages/user scenarios, but we still need to fill them in

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -2,17 +2,18 @@
 \usetheme{Montpellier}
 \usecolortheme{dolphin}
 
-\usepackage{graphicx} %For jpg figure inclusion
-\usepackage{times} %For typeface
-\usepackage{epsfig}
+%\usepackage{graphicx} %For jpg figure inclusion
+%\usepackage{times} %For typeface
+%\usepackage{epsfig}
 \usepackage{color} %For Comments
-\usepackage[all]{xy}
-\usepackage{float}
-\usepackage{subfigure} 
-\usepackage{hyperref}
-\usepackage{url}
-\usepackage{parskip}
-\usepackage{multirow}
+\usepackage{beamerthemeshadow} %Paul and Lemmon put this in, take out if you want
+%\usepackage[all]{xy}
+%\usepackage{float}
+%\usepackage{subfigure} 
+%\usepackage{hyperref}
+%\usepackage{url}
+%\usepackage{parskip}
+%\usepackage{multirow}
 
 %% Elena's favorite green (thanks, Fernando!)
 \definecolor{ForestGreen}{RGB}{34,139,34}
@@ -63,6 +64,77 @@ April 11, 2015\par}
   	 \item Fill in things here......
 	 \end{itemize}
 \end{frame}
+
+\section{Error Messages}
+
+\begin{frame}
+\frametitle{Clojure error messages: background}
+	\begin{itemize}
+  		\item Error messages need to be:
+  		\begin{itemize}
+  	 		\item helpful for debugging
+  	 		\item easy to understand
+  	 		\item approachable
+  		\end{itemize}
+	 \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Clojure error messages: example}
+	\begin{itemize}
+  	 \item Fill in things here......
+	 \end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Error message transformations: try/catch}
+	\begin{itemize}
+  	 \item Fill in things here......
+	 \end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Error message transformations: function substitution}
+	\begin{itemize}
+  	 \item Fill in things here......
+	 \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{User scenarios: example}
+	\begin{itemize}
+  	 \item Fill in things here......
+	 \end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{User scenarios: explanation}
+	\begin{itemize}
+  	 \item Fill in things here......
+	 \end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Hints: How they are helpful}
+	\begin{itemize}
+  	 \item Fill in things here......
+	 \end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Hints: example}
+	\begin{itemize}
+  	 \item Fill in things here......
+	 \end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Hints: future work}
+	\begin{itemize}
+  	 \item Fill in things here......
+	 \end{itemize}
+\end{frame}
+
 
 \end{document}
 
