added red to a slide; corrected some edits

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -266,9 +266,8 @@ Exception in thread "main" java.lang.RuntimeException: EOF while reading, starti
 	\end{verbatim}
 	
 	Corrected Code:
-	\begin{verbatim}
-	(defn square-this [input] (* input input))
-	\end{verbatim}
+	
+	\texttt{(defn square-this \alert{[input]} (* input input))}
 \end{frame}
 
 \begin{frame}
