Some changes to the slides

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -56,6 +56,18 @@ April 11, 2015\par}
 \tableofcontents  
 \end{frame}
 
+\section{Introduction to the Project}
+\begin{frame}
+	\frametitle{Clojure in an Introductory Course}
+	\begin{itemize}
+		\item Developed 
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Motivations for the Project}
+\end{frame}
+
 \section{Overview of Clojure}
 
 \begin{frame}
@@ -306,14 +318,14 @@ Exception in thread "main" java.lang.RuntimeException: EOF while reading, starti
 \begin{frame}
 \frametitle{Setup}
 	\begin{itemize}
-		\item IDE
+		\item IDE options
 		\begin{itemize}
 			\item LightTable
 			\item Nightcode
 		\end{itemize}
-		\item Leiningen
+		\item project manager
 		\begin{itemize}
-			\item project manager
+			\item Leiningen
 			\item popular in Clojure community
 		\end{itemize}
 	\end{itemize}
