Added the last slide

--- a/mics2015talk/mics2015talk.tex
+++ b/mics2015talk/mics2015talk.tex
@@ -223,9 +223,7 @@ April 11, 2015\par}
 \frametitle{Clojure error messages: example}
 
 \begin{verbatim}
-	Exception in thread "main" java.lang.RuntimeException: 
-	EOF while reading, starting at line 3
-	compiling:(compilation_errors/eof.clj:4:1)
+Exception in thread "main" java.lang.RuntimeException: EOF while reading, starting at line 3, compiling:(compilation_errors/eof.clj:4:1)
 	at clojure.lang.Compiler.load(Compiler.java:7137)
 	at clojure.lang.RT.loadResourceScript(RT.java:370)
 	at clojure.lang.RT.loadResourceScript(RT.java:361)
@@ -407,6 +405,11 @@ named in your program, make sure it is spelled correctly.
 
 \begin{frame}
 \frametitle{What needs to be done}
+\begin{itemize}
+	\item these solutions are a work in progress
+	\item the system still needs implementation
+	\item the proposed solution is a result of our findings
+\end{itemize}
 \end{frame}
 
 \end{document}
